--- a/package.json
+++ b/package.json
@@ -8,15 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "boostrap": "^2.0.0",
+    "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "jquery": "^3.4.1",
+    "moment": "^2.29.3",
+    "popper.js": "^1.16.0",
+    "uuid": "^8.3.2",
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.1",
-    "@vue/cli-plugin-eslint": "^4.1.1",
-    "@vue/cli-service": "^4.1.1",
+    "@vue/cli-plugin-babel": "^5.0.4",
+    "@vue/cli-plugin-eslint": "^5.0.4",
+    "@vue/cli-plugin-router": "^5.0.4",
+    "@vue/cli-service": "^5.0.4",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^7.5.0",
     "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
   },
