--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
     "jquery": "^3.4.1",
     "moment": "^2.29.3",
     "popper.js": "^1.16.0",
+    "sweetalert2": "^9.8.2",
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1"
