--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "sweetalert2": "^9.8.2",
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.4",
     "@vue/cli-plugin-eslint": "^5.0.4",
     "@vue/cli-plugin-router": "^5.0.4",
+    "@vue/cli-plugin-vuex": "^5.0.4",
     "@vue/cli-service": "^5.0.4",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.5.0",
